# journal-app

./: Makefile  README.md
.docs/: video-tut.webm
app/: .gitignore  README.md  app.json  package-lock.json  package.json
app/src/: api.ts  ctx.tsx  utils.ts
app/src/app/: _layout.tsx  home.tsx  login.tsx  register.tsx  sign-in.tsx
app/src/app/(app)/: _layout.tsx  journal.tsx  new_journal.tsx
app/src/app/(app)/(tabs)/: _layout.tsx  index.tsx  logout.tsx  settings.tsx
app/src/components/: JournalItem.tsx  Signin.tsx  avatar.tsx
app/src/hooks/: useJournals.tsx
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.py
backend/alembic/: env.py
backend/alembic/versions/: db1b25773970_user_journal_table.py  db1b25773970_user_workspace_table.py
backend/src/: auth_router.py  config.py  crud.py  main.py  models.py  schema.py  utils.py
backend/src/routes/: auth_router.py  category_router.py  journal_router.py  user_router.py
web/: .env  .gitignore  README.md  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/signup/: page.tsx
