[tool.poetry]
name = "journal_api"
version = "0.0.1"
description = "Api service for personal journaling app"
authors = ["obonyojimmy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
